<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Profileplacehold2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/BackBut2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:text="@string/backbutton_label"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/MessageSearchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/message_label"
            android:textSize="@dimen/message_search_text_size" />

        <ImageButton
            android:id="@+id/VideoBut"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:background="@drawable/VideoCamera" />

        <ImageButton
            android:id="@+id/PhoneBut"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/SearchBut2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:background="@drawable/SearchGlass" />

        <ImageButton
            android:id="@+id/SettingsBut2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:background="@drawable/SettingGear" />

        <Button
            android:id="@+id/CloseBut2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:text="@string/closebutton_label"
            tools:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecureBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SecureLabel"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/secure_label_message" />

        <CheckBox
            android:id="@+id/SecureBox"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/MessageList"
        android:layout_width="match_parent"
        android:layout_height="551dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/SendButton"
            android:layout_width="@dimen/sendbutton_size"
            android:layout_height="@dimen/sendbutton_size"
            android:layout_weight="1"
            android:background="@drawable/MessagePlane" />

        <EditText
            android:id="@+id/MessageBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/message_bar_hint"
            android:inputType="textPersonName" />
    </LinearLayout>
</LinearLayout>