<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Profileplacehold"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:visibility="visible" />

        <Button
            android:id="@+id/BackBut"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/backbutton_label"
            android:visibility="gone"
            tools:visibility="gone" />

        <SearchView
            android:id="@+id/ContactSearchBar"
            android:layout_width="@dimen/contact_search"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:queryHint="Enter Contact" />

        <ImageButton
            android:id="@+id/SettingsBut"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:background="@drawable/settingsgear"
            android:onClick="movetoSettings"
            tools:visibility="visible" />

        <Button
            android:id="@+id/CloseBut"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/closebutton_label"
            android:visibility="gone"
            tools:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/Contact_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/NewContact"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="@dimen/newcontact_size"
        android:layout_height="83dp"
        android:layout_weight="0"
        android:background="@drawable/circle_button"
        android:text="@string/newcontact_label"
        android:translationX="310dp" />

</LinearLayout>